--- a/MinoxidilTrackerMobile.csproj
+++ b/MinoxidilTrackerMobile.csproj
@@ -6,17 +6,17 @@
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen;net9.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
-		<RootNamespace>MinoxidilTrackerMobile</RootNamespace>
+		<RootNamespace>HealthTrackerMobile</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>MinoxidilTrackerMobile</ApplicationTitle>
+		<ApplicationTitle>Health Tracker</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.minoxidiltrackermobile</ApplicationId>
+		<ApplicationId>com.healthtracker.mobile</ApplicationId>
 		<ApplicationIdGuid>96C633E1-11E5-4E87-A5D1-C033C85E2B39</ApplicationIdGuid>
 
 		<!-- Versions -->
