--- a/.github/workflows/android-only.yml
+++ b/.github/workflows/android-only.yml
@@ -1,7 +1,9 @@
 name: Build Android APK Only
 
 on:
-  workflow_dispatch: # Manual trigger only
+  push:
+    branches: [ master, main ]
+  workflow_dispatch: # Manual trigger also available
 
 jobs:
   build-android:
