--- a/MinoxidilTrackerMobile.csproj
+++ b/MinoxidilTrackerMobile.csproj
@@ -21,6 +21,9 @@
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+		
+		<!-- Ensure XAML compilation works -->
+		<EnableDefaultXamlItems>false</EnableDefaultXamlItems>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -45,6 +48,13 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Plugin.LocalNotification" Version="11.1.3" />
+	</ItemGroup>
+
+	<!-- Explicitly include XAML files -->
+	<ItemGroup>
+		<MauiXaml Include="App.xaml" />
+		<MauiXaml Include="AppShell.xaml" />
+		<MauiXaml Include="MainPage.xaml" />
 	</ItemGroup>
 
 </Project>
