--- a/MinoxidilTrackerMobile.csproj
+++ b/MinoxidilTrackerMobile.csproj
@@ -21,6 +21,15 @@
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+		
+		<!-- MAUI specific settings to prevent duplicate resources -->
+		<EnableDefaultXamlItems>true</EnableDefaultXamlItems>
+		<EnableDefaultCssItems>true</EnableDefaultCssItems>
+		<EnableDefaultImageItems>true</EnableDefaultImageItems>
+		<EnableDefaultFontItems>true</EnableDefaultFontItems>
+		<EnableDefaultSplashScreenItems>true</EnableDefaultSplashScreenItems>
+		<EnableDefaultAppIconItems>true</EnableDefaultAppIconItems>
+		<EnableDefaultRawItems>true</EnableDefaultRawItems>
 	</PropertyGroup>
 
 	<ItemGroup>
